XMLLayout: Modified MDC entries to not create CDATA attributes.  Also changed String casts to toString calls.
LogUI: If config.file property was defined for configuration, and the log4j.configuration system property was also provided, receivers were being loaded from both locations.  This caused 'could not bind' issues with socket-based receivers.
Not sure of a way to -unset- the config.file property, so now if a log4j.configuration exists, the config.file configuration is not used.


Modified 
PR:
Obtained from:
Submitted by:	
Reviewed by:	
CVS: ----------------------------------------------------------------------
CVS: PR:
CVS:   If this change addresses a PR in the problem report tracking
CVS:   database, then enter the PR number(s) here.
CVS: Obtained from:
CVS:   If this change has been taken from another system, such as NCSA,
CVS:   then name the system in this line, otherwise delete it.
CVS: Submitted by:
CVS:   If this code has been contributed to Apache by someone else; i.e.,
CVS:   they sent us a patch or a new module, then include their name/email
CVS:   address here. If this is your work then delete this line.
CVS: Reviewed by:
CVS:   If we are doing pre-commit code reviews and someone else has
CVS:   reviewed your changes, include their name(s) here.
CVS:   If you have not had it reviewed then delete this line.

--- a/build.xml
+++ b/build.xml
@@ -13,10 +13,6 @@
   <!-- The build.properties file defines the parth to local jar files -->
   <property file="build.properties"/>
 
-  <!-- Read the system environment variables and stores them in properties, -->
-  <!-- prefixed with "env". -->
-  <property environment="env"/>
-
   <property name="version" value="1.3alpha"/>
 
   <!-- The base directory relative to which most targets are built -->
@@ -110,8 +106,6 @@
     jar     - build log4j-core and log4j jar files
 
     dist    - will create a complete distribution in dist/
-              Setting the env variable NO_JAVADOC will build the distribution
-              without running the javadoc target.
     </echo>
   </target>
 
@@ -545,7 +539,7 @@
   <!-- ================================================================= -->
   <!-- This target builds the javadoc files.                             -->
   <!-- ================================================================= -->
-  <target name="javadoc" depends="init" unless="env.NO_JAVADOC">
+  <target name="javadoc" depends="init">
 
     <mkdir dir="${javadoc.dest}" />
 
