Issue number: 19744 - Scarab hangs if under heavy load at startup The problem here is in torque which can deadlock if two threads try to load the om classes concurrently.  A BaseFoo class requires a FooPeer instance. synchronization can prevent this from completing.  Have not determined what the fix will be in torque yet, so this is a workaround.  We make sure to load each class during the application initialization, so that we are guaranteed single-threadededness.
Modified files:
* build/build.xml - replace TORQUE_SERVICE
  token with the scarab.torque.service property value
* build/default.properties - added property
  scarab.torque.service with the o.t.s.services.TorqueService as value
* src/conf/Scarab.properties - replaced
  hardcoded service class with TORQUE_SERVICE token
* src/java/org/tigris/scarab/services/TorqueService.java -
  modified init method to call new loadOM() method which pre-loads
  the <om>Manager, <om>, and <om>Peer classes.  In most cases this is done
  via a single call to <om>Manager.getInstance() unless that short form is
  not allowed.

Reviewed by: elicia

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -94,7 +94,7 @@ searchindex.path=@LUCENE_INDEX_PATH@
 # Services
 services.ScarabSecurity.classname=org.tigris.scarab.services.security.ScarabSecurity
 services.ScarabCache.classname=org.tigris.scarab.services.cache.ScarabCache
-services.TorqueService.classname=org.tigris.scarab.services.TorqueService
+services.TorqueService.classname=@TORQUE_SERVICE@
 services.TorqueService.earlyInit = true
 services.DatabaseInitializer.classname=@DATABASE_INIT_SERVICE@
 services.DatabaseInitializer.earlyInit = true
