--- a/plugins/org.columba.example.HelloWorldAction/plugin.xml
+++ b/plugins/org.columba.example.HelloWorldAction/plugin.xml
@@ -5,8 +5,8 @@
  <extension name="org.columba.core.action">
   <action name="HelloWorld" class="com.mycom.HelloWorldAction" />
  </extension>
- <extension name="org.columba.core.menu">
-  <menu name="menu_file" extensionpoint="top">
+ <extension name="org.columba.mail.menu">
+  <menu name="menu_utilities" extensionpoint="top">
   	<menuitem action="org.columba.example.HelloWorldAction$HelloWorld"/>
   	<separator/>
   </menu>
