Add missing resource message.PR# 21203

--- a/src/share/org/apache/struts/action/ActionResources.properties
+++ b/src/share/org/apache/struts/action/ActionResources.properties
@@ -9,6 +9,7 @@ configMapping=Configuring mapping for path {0}
 configMissing=Missing configuration resource for path {0}
 configParse=Parsing error processing resource path {0}
 configVerifying=Verifying ModuleConfig for this application module
+configWebXml=The /WEB-INF/web.xml was not found.
 dataSource.destroy=Finalizing application data source {0}
 dataSource.init=Initializing application data source {0}
 destroyDataSource=Exception destroying application data source {0}
