Issue number: 19815 - Getting connection is null error, rendering scarab unusable after a period of it working properly.  The main fix for this problem was an earlier upgrade of commons-dbcp.  But it prompted changes to better handle the open Connection objects we would have in the case of an exception.
Modified files:
* build/build.xml - replace REQUEST_ERROR_HANDLER token with value of
  scarab.request.error.handler property
* build/default.properties - set scarab.request.error.handler =
  org.apache.turbine.exception.DefaultExceptionHandler
* lib/turbine-3.0-alpha-1.jar - now invokes the exception handler in all
  cases that an error occurs and the DefaultExceptionHandler is modified
  to return pull tools to the pool (calling dispose)
* src/conf/TurbineResources.properties and
  src/conf/TurbineResourcesTest.properties - added
  exceptionHandler.default=@REQUEST_ERROR_HANDLER@
* src/java/org/tigris/scarab/tools/ScarabRequestTool.java -
  dispose: added debug logging (this method should always be called now,
  so that we are less likely to see Connection leakage.)
Reviewed by: dlr

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.130 2003/06/20 00:38:04 dlr Exp $
+# $Id: TurbineResources.properties,v 1.131 2003/07/17 03:17:34 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -271,6 +271,10 @@ template.homepage=@HOMEPAGE@
 # Default: /Error.wm
 
 template.error=Error.vm
+
+# The class that handles an error during request processing.  The default
+# behavior is to render the template given by template.error property
+exceptionHandler.default=@REQUEST_ERROR_HANDLER@
 
 # This is the default action to log a user in.
 # Default: LoginUser
