--- a/src/conf/TurbineResourcesTest.properties
+++ b/src/conf/TurbineResourcesTest.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResourcesTest.properties,v 1.24 2003/04/28 22:33:55 jmcnally Exp $
+# $Id: TurbineResourcesTest.properties,v 1.25 2003/07/17 03:17:34 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -270,6 +270,10 @@ template.homepage=@HOMEPAGE@
 # Default: /Error.wm
 
 template.error=Error.vm
+
+# The class that handles an error during request processing.  The default
+# behavior is to render the template given by template.error property
+exceptionHandler.default=@REQUEST_ERROR_HANDLER@
 
 # This is the default action to log a user in.
 # Default: LoginUser
