Issue number: 19815 - Getting connection is null error, rendering scarab unusable after a period of it working properly.  The main fix for this problem was an earlier upgrade of commons-dbcp.  But it prompted changes to better handle the open Connection objects. This change limits the number open queries, so that the entire application cannot be made completely unusable by using up all connections to the db for issue queries.
Modified files:
* src/conf/Scarab.properties - added scarab.concurrent.search.max and
  scarab.concurrent.search.wait to control the availability of IssueSearch
  objects.
* src/i18n/ScarabBundle_en_US.properties - new resources: Unavailable,
  DupeCheckSkippedForLackOfResources, and ResourceLimitationsPreventedSearch
  for messages related to reaching the maximum number of searches.
* src/java/org/tigris/scarab/actions/ReportIssue.java -
  searchAndSetTemplate: getting IssueSearch object from factory and added
  try/catch/finally to notify the factory when we are done and notify the
  user if duplicate checking is unavailable.
* src/java/org/tigris/scarab/om/MITListItem.java - getIssueCount:
  getting IssueSearch object from factory and added
  try/catch/finally to notify the factory when we are done and return a
  value of -1, if we could not get the count.
* src/java/org/tigris/scarab/tools/ScarabRequestTool.java -
  refresh: notify the factory we are done with the IssueSearch object
  getNewSearch: getting IssueSearch object from factory and added
  throws MaxConcurrentSearchException clause
  getCurrentSearchResults: catch MaxConcurrentSearchException and notify
  user, the search can't be done at this time.
* src/java/org/tigris/scarab/util/word/IssueSearch.java -
  make all constructors package access only, as factory should be used to
  get an IssueSearch object.
  finalize: add extra insurance that we don't leak IssueSearch objects
  by notifying the factory, if it did not appear that this object was
  cleaned up properly
* src/templat

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -330,3 +330,18 @@ template.reports/ReportList.vm.title=Title
 template.home/EnterNew.vm.title=Title
 template.home/ModuleQuery.vm.title=Title
 template.home/XModuleList.vm.title=Title
+
+
+# Maximum number of concurrent searches.  If not given or value is negative, 
+# unlimited concurrent searches are  allowed (will then be limited by db 
+# connections).  A value of 0 will disable searching.
+# This value is not a hard limit.  In cases where an exception could lead
+# either to depleting the available number or adding an extra instance, 
+# adding an extra search is chosen.  This property would generally be set
+# to some fraction of the maximum db connections available.
+scarab.concurrent.search.max=20
+
+# How long to wait (in seconds) for a search object if one is not
+# immediately available.  If not given or value is negative, we block till a 
+# search can be started. A value of 0 will fail immediately.
+scarab.concurrent.search.wait=30
