--- a/plugins/org.columba.example.AddHeaderPOP3PreprocessingFilter/build.xml
+++ b/plugins/org.columba.example.AddHeaderPOP3PreprocessingFilter/build.xml
@@ -6,8 +6,8 @@
  <property name="build" value="build"/>
  <property name="user.name" value="The Columba Team"/>
  <property name="version" value="1.0"/>
- <property name="dest" value="HelloWorldAction"/>
-  <property name="plugin-id" value="org.columba.example.HelloWorldAction"/>
+ <property name="dest" value="AddHeaderPOP3PreprocessingFilter"/>
+ <property name="plugin-id" value="org.columba.example.AddHeaderPOP3PreprocessingFilter"/>
  <property name="ownclasspath" value="${classpath}:${columba_src}:${columba_src}/lib/log4j.jar:${columba_src}/lib/jython.jar:${columba_src}/lib/junit.jar:${columba_src}/lib/jakarta-oro-2.0.6.jar"/>
 
  <!-- compile the classes -->
