--- a/plugins/org.columba.example.AddHeaderPOP3PreprocessingFilter/plugin.xml
+++ b/plugins/org.columba.example.AddHeaderPOP3PreprocessingFilter/plugin.xml
@@ -5,5 +5,5 @@
  <extension name="org.columba.mail.pop3preprocessingfilter">
   <pop3preprocessingfilter name="AddHeader" class="AddHeaderPOP3PreProcessingFilterPlugin"/>
  </extension>
- <runtime type="java"/>
+ <runtime type="java" jar="AddHeaderPOP3PreProcessingFilter.jar"/>
 </plugin>
