* src/conf/TurbineResources.properties Added capability to override module.packages at build time

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.131 2003/07/17 03:17:34 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.132 2003/07/25 16:21:17 thierrylach Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -213,7 +213,7 @@ resolver.cache.module   = @TEMPLATE_CACHE@
 # Default: org.apache.turbine.modules
 # -------------------------------------------------------------------
 
-module.packages=org.tigris.scarab
+module.packages=@SCARAB_MODULE_PACKAGES@
 
 # These are the default modules to emulate the Turbine
 # 2.1 page/layout/nav/screen system.
