Issue number: 20976 - A housekeeping thread with no work to do shouldn't be started.
Modified Files:
* src/conf/TurbineResources.properties - set timeBetweenEvictionRunsMillis
  connection pool property to -1, which indicates it is not needed.

Reviewed by: dlr, tested by sutha

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.132 2003/07/25 16:21:17 thierrylach Exp $
+# $Id: TurbineResources.properties,v 1.133 2003/07/26 00:19:44 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -437,6 +437,12 @@ torque.dsfactory.scarab.factory=\
 torque.dsfactory.scarab.pool.defaultMaxActive=30
 torque.dsfactory.scarab.pool.defaultMaxWait=30000
 torque.dsfactory.scarab.pool.testOnBorrow=true
+# this will be the default for next update of dbcp, but right now
+# it is set to a high value, which creates a thread that sleeps
+# for weeks.  A value of -1 does not start the eviction thread
+# Since we do not test while idle, or evict idle connections we do
+# not need the evict thread to run 
+torque.dsfactory.scarab.pool.timeBetweenEvictionRunsMillis=-1
 torque.dsfactory.scarab.pool.validationQuery=@DATABASE_VALIDATION_QUERY@
 torque.dsfactory.scarab.connection.driver = @DATABASE_DRIVER@
 torque.dsfactory.scarab.connection.url = @DATABASE_URL@
