--- a/src/conf/web.xml
+++ b/src/conf/web.xml
@@ -69,8 +69,7 @@
     </servlet-mapping>
 
     <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>@SCARAB_WELCOME_FILE@</welcome-file>
     </welcome-file-list>
  
     <security-constraint>
