--- a/src/conf/web.xml
+++ b/src/conf/web.xml
@@ -47,6 +47,21 @@
         </init-param>
     </servlet>
 -->
+    <servlet>
+        <servlet-name>AxisServlet</servlet-name>
+        <display-name>Apache-Axis Servlet</display-name>
+        <servlet-class>org.apache.axis.transport.http.AxisServlet</servlet-class>
+    </servlet>
+  <servlet>
+    <servlet-name>AdminServlet</servlet-name>
+    <display-name>Axis Admin Servlet</display-name>
+    <servlet-class>
+        org.apache.axis.transport.http.AdminServlet
+    </servlet-class>
+    <load-on-startup>100</load-on-startup>
+  </servlet>
+
+
     <servlet-mapping>
         <servlet-name>@SCARAB_CONTEXT@</servlet-name>
         <url-pattern>/s/*</url-pattern>
@@ -67,6 +82,26 @@
         <servlet-name>@SCARAB_CONTEXT@</servlet-name>
         <url-pattern>/servlets/@SCARAB_CONTEXT@/*</url-pattern>
     </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>AxisServlet</servlet-name>
+        <url-pattern>/servlet/AxisServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>AxisServlet</servlet-name>
+        <url-pattern>*.jws</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>AxisServlet</servlet-name>
+        <url-pattern>/services/*</url-pattern>
+    </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>AdminServlet</servlet-name>
+    <url-pattern>/servlet/AdminServlet</url-pattern>
+  </servlet-mapping>
 
     <welcome-file-list>
         <welcome-file>@SCARAB_WELCOME_FILE@</welcome-file>
